# CnTracker

./: .cproject  .gitignore  .project  CMakeLists.txt  cntracker  color_attributes_tracker.cpp  color_attributes_tracker.h  config.cpp  config.h  config.txt  main.cpp  name.txt  w2c.txt
Debug/: .gitignore  CNTracker  CnTracker  cntracker  cntracker_tmp  makefile  subdir.mk
sequences/demoroom/: demoroom_frames.txt
